--- a/Conter/.classpath
+++ b/Conter/.classpath
@@ -3,14 +3,11 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="/cshome/bqi/google-gson-2.2.4/gson-2.2.4.jar"/>
-	<classpathentry kind="lib" path="/cshome/bqi/google-gson-2.2.4/gson-2.2.4-javadoc.jar"/>
-	<classpathentry kind="lib" path="/cshome/bqi/google-gson-2.2.4/gson-2.2.4-sources.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.soyatec.uml.CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="/cshome/bqi/c301/Cmput301_winter14_Counter/Conter/libs/gson-2.2.4.jar"/>
-	<classpathentry kind="lib" path="/cshome/bqi/c301/Cmput301_winter14_Counter/Conter/libs/gson-2.2.4-javadoc.jar"/>
-	<classpathentry kind="lib" path="/cshome/bqi/c301/Cmput301_winter14_Counter/Conter/libs/gson-2.2.4-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gson-2.2.4.jar"/>
+	<classpathentry kind="lib" path="libs/gson-2.2.4-sources.jar"/>
+	<classpathentry kind="lib" path="libs/gson-2.2.4-javadoc.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
